compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__case_clause_pipe_diagnostic.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub fn change(x: String) -> String {\n  \"\"\n}\n\npub fn parse(input: BitArray) -> String {\n  case input {\n    <<>> -> 1\n    <<\"(\":utf8, b:bytes>> ->\n      parse(input)\n      |> change\n    _ -> 3\n  }\n}"
---
----- SOURCE CODE

pub fn change(x: String) -> String {
  ""
}

pub fn parse(input: BitArray) -> String {
  case input {
    <<>> -> 1
    <<"(":utf8, b:bytes>> ->
      parse(input)
      |> change
    _ -> 3
  }
}

----- ERROR
error: Type mismatch
   ┌─ /src/one/two.gleam:7:3
   │  
 7 │ ╭   case input {
 8 │ │     <<>> -> 1
 9 │ │     <<"(":utf8, b:bytes>> ->
10 │ │       parse(input)
11 │ │       |> change
12 │ │     _ -> 3
13 │ │   }
   │ ╰───^

The type of this returned value doesn't match the return type
annotation of this function.

Expected type:

    String

Found type:

    Int

error: Type mismatch
   ┌─ /src/one/two.gleam:9:5
   │  
 9 │ ╭     <<"(":utf8, b:bytes>> ->
10 │ │       parse(input)
11 │ │       |> change
   │ ╰───────────────^

This case clause was found to return a different type than the previous
one, but all case clauses must return the same type.

Expected type:

    Int

Found type:

    String
