compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__case_could_not_unify.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case 1, 2.0 { a, b -> a 1, 2 -> 0 }"
---
----- SOURCE CODE
case 1, 2.0 { a, b -> a 1, 2 -> 0 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:28
  │
1 │ case 1, 2.0 { a, b -> a 1, 2 -> 0 }
  │                            ^

Expected type:

    Float

Found type:

    Int
