compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__case_list_guard.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case [1] { x if x == [1, 2.0] -> 1 }"
---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:26
  │
1 │ case [1] { x if x == [1, 2.0] -> 1 }
  │                          ^^^

Expected type:

    Int

Found type:

    Float

error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:1:1
  │
1 │ case [1] { x if x == [1, 2.0] -> 1 }
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

This case expression does not have a pattern for all possible values.
If it is run on one of the values without a pattern then it will crash.

The missing patterns are:

    _
