compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__case_subject_pattern_unify_2.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case 1 { 1.0 -> 1 }"
---
----- SOURCE CODE
case 1 { 1.0 -> 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:10
  │
1 │ case 1 { 1.0 -> 1 }
  │          ^^^

Expected type:

    Int

Found type:

    Float
